Utworzono za pomocą Colaboratory

--- a/Plan_zajec.ipynb
+++ b/Plan_zajec.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPHwgezjqCe+wZfBMafNde",
+      "authorship_tag": "ABX9TyOe1auI3a3f6VDspgXay94y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,50 +28,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "40uQ_pzgH2CK"
-      },
-      "outputs": [],
       "source": [
-        "godziny=[]\n",
-        "poniedzialek=[]\n",
-        "wtorek=[]\n",
-        "sroda=[]\n",
-        "czwartek=[]\n",
-        "piatek=[]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "godziny.append(\"8:00-8:45\")\n",
-        "godziny.append(\"8:50-9:35\")\n",
-        "godziny.append(\"9:40-10:25\")\n",
-        "godziny.append(\"10:40-11:25\")\n",
-        "godziny.append(\"11:30-12:15\")\n",
-        "godziny.append(\"12:20-13:25\")\n",
-        "godziny.append(\"13:30-14:15\")"
+        "import pandas as pd\n"
       ],
       "metadata": {
-        "id": "UU5M01xFKJfu"
-      },
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "poniedzialek.append(\" - \")\n",
-        "poniedzialek.append(\" - \")\n",
-        "poniedzialek.append(\"matematyka\")\n",
-        "poniedzialek.append(\"język polski\")\n",
-        "poniedzialek.append(\"język angielski\")\n",
-        "poniedzialek.append(\"wf\")\n",
-        "poniedzialek.append(\" - \")"
-      ],
-      "metadata": {
-        "id": "BHjAo3ktLMu5"
+        "id": "7qHhQXqyOc99"
       },
       "execution_count": 8,
       "outputs": []
@@ -79,70 +40,59 @@
     {
       "cell_type": "code",
       "source": [
-        "wtorek.append(\"przyroda\")\n",
-        "wtorek.append(\"religia\")\n",
-        "wtorek.append(\"muzyka\")\n",
-        "wtorek.append(\"matematyka\")\n",
-        "wtorek.append(\"język polski\")\n",
-        "wtorek.append(\" - \")\n",
-        "wtorek.append(\" - \")"
+        "plan_lekcji = {\n",
+        "    \"Poniedziałek\":[\" - \",\" - \",\"matematyka\",\"język polski\",\"język angielski\",\"wf\",\" - \"],\n",
+        "    \"Wtorek\":[\"przyroda\",\"religia\",\"muzyka\",\"matematyka\",\"język polski\",\" - \",\" - \"],\n",
+        "    \"Środa\":[\" - \",\"informatyka\",\"plastyka\",\"matematyka\",\"język polski\",\" - \",\" - \"],\n",
+        "    \"Czwartek\":[\" - \",\"język angielski\",\"religia\",\"matematyka\",\"język polski\",\" wf \",\" - \"],\n",
+        "    \"Piątek\":[\" - \",\"informatyka\",\"język polski\",\"matematyka\",\"przyroda\",\" - \",\" - \"]\n",
+        "}\n",
+        "PlanDF =pd.DataFrame(plan_lekcji, index = [\"8:00-8:45\",\"8:50-9:35\",\"9:40-10:25\",\"10:40-11:25\",\"11:30-12:15\",\"12:20-13:25\",\"13:30-14:15\"])"
       ],
       "metadata": {
-        "id": "zPXLypK9L37q"
+        "id": "ttCyoI32QsOa"
       },
-      "execution_count": 10,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "sroda.append(\" - \")\n",
-        "sroda.append(\"informatyka\")\n",
-        "sroda.append(\"plastyka\")\n",
-        "sroda.append(\"matematyka\")\n",
-        "sroda.append(\"język polski\")\n",
-        "sroda.append(\" - \")\n",
-        "sroda.append(\" - \")"
+        "print(PlanDF)"
       ],
       "metadata": {
-        "id": "gpESoQ3qMWzb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iNipprtzN4cR",
+        "outputId": "a6324a97-d3d8-4eaf-e160-a0d791364dab"
       },
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "czwartek.append(\" - \")\n",
-        "czwartek.append(\"język angielski\")\n",
-        "czwartek.append(\"religia\")\n",
-        "czwartek.append(\"matematyka\")\n",
-        "czwartek.append(\"język polski\")\n",
-        "czwartek.append(\" wf \")\n",
-        "czwartek.append(\" - \")"
-      ],
-      "metadata": {
-        "id": "Xeyb0oIdM8sh"
-      },
-      "execution_count": 12,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "piatek.append(\" - \")\n",
-        "piatek.append(\"informatyka\")\n",
-        "piatek.append(\"język polski\")\n",
-        "piatek.append(\"matematyka\")\n",
-        "piatek.append(\"przyroda\")\n",
-        "piatek.append(\" - \")\n",
-        "piatek.append(\" - \")"
-      ],
-      "metadata": {
-        "id": "smhPXD_LM8mY"
-      },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                Poniedziałek        Wtorek         Środa         Czwartek  \\\n",
+            "8:00-8:45                 -       przyroda            -                -    \n",
+            "8:50-9:35                 -        religia   informatyka  język angielski   \n",
+            "9:40-10:25        matematyka        muzyka      plastyka          religia   \n",
+            "10:40-11:25     język polski    matematyka    matematyka       matematyka   \n",
+            "11:30-12:15  język angielski  język polski  język polski     język polski   \n",
+            "12:20-13:25               wf            -             -               wf    \n",
+            "13:30-14:15               -             -             -                -    \n",
+            "\n",
+            "                   Piątek  \n",
+            "8:00-8:45              -   \n",
+            "8:50-9:35     informatyka  \n",
+            "9:40-10:25   język polski  \n",
+            "10:40-11:25    matematyka  \n",
+            "11:30-12:15      przyroda  \n",
+            "12:20-13:25            -   \n",
+            "13:30-14:15            -   \n"
+          ]
+        }
+      ]
     }
   ]
 }
