Utworzono za pomocą Colaboratory

--- a/Plan_zajec.ipynb
+++ b/Plan_zajec.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOe1auI3a3f6VDspgXay94y",
+      "authorship_tag": "ABX9TyNXKoLu3feGmZI67Ya/ok2u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,6 +93,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#test"
+      ],
+      "metadata": {
+        "id": "aoOTosNaWQz6"
+      },
+      "execution_count": 27,
+      "outputs": []
     }
   ]
 }
