Utworzono za pomocą Colaboratory

--- a/Plan_zajec.ipynb
+++ b/Plan_zajec.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXKoLu3feGmZI67Ya/ok2u",
+      "authorship_tag": "ABX9TyMGrNv16CuZvCA7/1aWd2gM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "7qHhQXqyOc99"
       },
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "ttCyoI32QsOa"
       },
-      "execution_count": 25,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -65,9 +65,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iNipprtzN4cR",
-        "outputId": "a6324a97-d3d8-4eaf-e160-a0d791364dab"
+        "outputId": "3449922e-2990-4b0f-b3fc-409aab51729c"
       },
-      "execution_count": 26,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,13 +97,60 @@
     {
       "cell_type": "code",
       "source": [
-        "#test"
+        "print(PlanDF.loc[\"8:00-8:45\"])\n"
       ],
       "metadata": {
-        "id": "aoOTosNaWQz6"
+        "id": "aoOTosNaWQz6",
+        "outputId": "0e1d2341-8fa2-4ff0-aea4-4abcd5525a91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 27,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Poniedziałek          - \n",
+            "Wtorek          przyroda\n",
+            "Środa                 - \n",
+            "Czwartek              - \n",
+            "Piątek                - \n",
+            "Name: 8:00-8:45, dtype: object\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(PlanDF['Poniedziałek'])"
+      ],
+      "metadata": {
+        "id": "GpuC8UTnVMYW",
+        "outputId": "e1a167b8-821f-4ce4-ba47-8806bd4f246a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8:00-8:45                   - \n",
+            "8:50-9:35                   - \n",
+            "9:40-10:25          matematyka\n",
+            "10:40-11:25       język polski\n",
+            "11:30-12:15    język angielski\n",
+            "12:20-13:25                 wf\n",
+            "13:30-14:15                 - \n",
+            "Name: Poniedziałek, dtype: object\n"
+          ]
+        }
+      ]
     }
   ]
 }
