Utworzono za pomocą Colaboratory

--- a/Plan_zajec.ipynb
+++ b/Plan_zajec.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGrNv16CuZvCA7/1aWd2gM",
+      "authorship_tag": "ABX9TyOvyZAoorJvQcZlWb2x8WTb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,10 +101,10 @@
       ],
       "metadata": {
         "id": "aoOTosNaWQz6",
-        "outputId": "0e1d2341-8fa2-4ff0-aea4-4abcd5525a91",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0e1d2341-8fa2-4ff0-aea4-4abcd5525a91"
       },
       "execution_count": 7,
       "outputs": [
@@ -128,11 +128,11 @@
         "print(PlanDF['Poniedziałek'])"
       ],
       "metadata": {
-        "id": "GpuC8UTnVMYW",
-        "outputId": "e1a167b8-821f-4ce4-ba47-8806bd4f246a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GpuC8UTnVMYW",
+        "outputId": "e1a167b8-821f-4ce4-ba47-8806bd4f246a"
       },
       "execution_count": 8,
       "outputs": [
@@ -141,6 +141,47 @@
           "name": "stdout",
           "text": [
             "8:00-8:45                   - \n",
+            "8:50-9:35                   - \n",
+            "9:40-10:25          matematyka\n",
+            "10:40-11:25       język polski\n",
+            "11:30-12:15    język angielski\n",
+            "12:20-13:25                 wf\n",
+            "13:30-14:15                 - \n",
+            "Name: Poniedziałek, dtype: object\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PlanDF.at['8:00-8:45','Poniedziałek']=\"Fizyka\""
+      ],
+      "metadata": {
+        "id": "kIa1wfHmgyvn"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(PlanDF['Poniedziałek'])"
+      ],
+      "metadata": {
+        "id": "lO6HL45Kh7nO",
+        "outputId": "da3b2533-5710-429a-c8b5-5ecda6009dbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8:00-8:45               Fizyka\n",
             "8:50-9:35                   - \n",
             "9:40-10:25          matematyka\n",
             "10:40-11:25       język polski\n",
